force-app/main/default/objects/Lead_Round_Robin_Assignment__c/Lead_Round_Robin_Assignment__c.object-meta.xml
<CustomObject>
    <label>Iron Man Assignment</label>
    <nameField>
        <label>Lead Round Robin Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Iron Man Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>