force-app/main/default/objects/Lead_Round_Robin_Assignment__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <formula>(Daily_Assignment__c/Daily_Limit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>