force-app/main/default/objects/Lead_Round_Robin_Assignment__c/fields/Daily_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Daily_Assignment__c</fullName>
    <label>Daily Assignment</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>