force-app/main/default/objects/Lead_Round_Robin_Assignment__c/fields/Distance_from_ShowRoom__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_ShowRoom__c</fullName>
    <label>Distance from ShowRoom</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>