force-app/main/default/objects/Lead_Round_Robin_Assignment__c/fields/IronMan_Reference__c.field-meta.xml
<CustomField>
    <fullName>IronMan_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IronMan Reference</label>
    <referenceTo>Showroom_User__c</referenceTo>
    <relationshipLabel>Iron Man Assignments</relationshipLabel>
    <relationshipName>ronMan_LeadAssignment</relationshipName>
    <type>Lookup</type>
</CustomField>