force-app/main/default/objects/Lead_Round_Robin_Assignment__c/fields/Showroom_Name__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Name__c</fullName>
    <label>Showroom Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>