force-app/main/default/objects/Lead_Round_Robin_Assignment__c/validationRules/IronMan_Business_Operations_Non_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>IronMan_Business_Operations_Non_Editable</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name=&apos;IronMan Business Operations&apos;,OR(ISCHANGED(Daily_Assignment__c),ISCHANGED( IronMan_Reference__c),ISCHANGED(Monthly_Assignments__c),ISCHANGED(Showroom_Name__c),ISCHANGED( User__c),ISCHANGED(Name)))</errorConditionFormula>
    <errorMessage>You don&apos;t have permission to edit these fields.</errorMessage>
</ValidationRule>