force-app/main/default/objects/Lead_Round_Robin_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Showroom_Name__c</columns>
    <columns>Distance_from_ShowRoom__c</columns>
    <columns>Daily_Limit__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Daily_Assignment__c</columns>
    <columns>Monthly_Assignments__c</columns>
    <columns>IronMan_Reference__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Assignment__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>